--- a/src/pages/privacyAndSecurity/privacyAndSecurity.css
+++ b/src/pages/privacyAndSecurity/privacyAndSecurity.css
@@ -14,6 +14,7 @@
 .four_oh_four_content {
   display: flex;
   justify-content: center;
+  padding-bottom: 10px;
 }
 
 .thank_you_outer_content {
@@ -33,4 +34,15 @@
   width: 166px;
   height: 55px;
   font-size: 20px;
+}
+
+.thank-you-image {
+  position: relative;
+  z-index: 2;
+}
+
+.thank-you-gray-lines {
+  position: absolute;
+  margin-bottom: -20px;
+  z-index: 1;
 }
