--- a/src/index.css
+++ b/src/index.css
@@ -117,9 +117,11 @@ code {
   justify-content: start;
 }
 
+/* Each marquee item is 345 px wide in total, 
+therefore, total marquee width is about 345 * # of marquee Items */
 .marquee {
   height: 500px;
-  width: 1482.92px;
+  min-width: 1380px !important;
   overflow: hidden;
   position: relative;
   margin: 10px auto;
@@ -140,10 +142,14 @@ code {
   animation-play-state: paused;
 }
 
+/* Each marquee item is 345 px wide in total, 
+therefore, total marquee width is about 345 * # of marquee Items */
 .marqueeItem {
   background: linear-gradient(transparent 15%, #ebf9ff 15% 85%);
-  /* background-color: #ebf9ff; */
-  width: 300px;
+  /* background-color: red; */
+  max-width: 300px !important;
+  min-width: 300px !important;
+  width: 300px !important;
   height: 300px;
 }
 
