--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -18,10 +18,6 @@
   line-height: 28px;
 }
 
-.homePageContainer {
-  /* min-width: 100% !important; */
-}
-
 .top_row {
   display: flex;
   justify-content: space-around;
@@ -81,7 +77,6 @@
 
 .homePageSchoolTestimonialsTitle {
   justify-content: center;
-  margin-bottom: 75px;
 }
 
 .homePageFeaturesSendDocumentLinkText {
@@ -338,6 +333,7 @@
   cursor: pointer;
   outline: inherit;
   margin-top: 10px;
+  min-width: 110px;
 }
 
 .get-a-demo-link {
@@ -385,4 +381,8 @@
 
 .white-font {
   color: white !important;
+}
+
+.get-a-demo-form {
+  min-width: 470px;
 }
