--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -241,3 +241,17 @@
   padding: 0.25rem 9999rem;
   background: #ebf9ff;
 }
+
+.full-width-near-black {
+  margin: 0 -9999rem;
+  /* add back negative margin value */
+  padding: 0.25rem 9999rem;
+  background: #2b1f31;
+}
+
+.full-width-dark-blue {
+  margin: 0 -9999rem;
+  /* add back negative margin value */
+  padding: 0.25rem 9999rem;
+  background: #1786df;
+}
