--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -276,7 +276,8 @@
 .imageObjectTitle {
   display: flex;
   justify-content: center;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+  padding-top: 50px;
 }
 
 .mobile-imageObjectTitle {
