--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -64,7 +64,6 @@
 .subFooterPageQuote {
   align-items: center;
   display: flex;
-  /* text-align: center; */
 }
 
 .bullet_point {
@@ -113,6 +112,5 @@
   margin: 0 -9999rem;
   /* add back negative margin value */
   padding: 0.25rem 9999rem;
-  /* background: #1786df; */
-  background: linear-gradient(white 20% #1886df 80%, white 100%);
+  background: linear-gradient(white 10%, #1786df 10% 90%, white 90%);
 }
