--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -14,8 +14,7 @@
 .titleContainer {
   margin-bottom: 100px;
   margin-top: 85px;
-  padding-left: 33%;
-  padding-right: 33%;
+  padding: 0 20%;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -69,6 +68,7 @@
 
 .bullet_point {
   margin-bottom: 10px;
+  margin: 0 15px 10px 15px;
 }
 
 .researchBottomRow {
