centering subfooter content

--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -86,6 +86,7 @@
 .subFooterPageImgContainer {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .full-width-light-blue {
@@ -114,4 +115,8 @@
   /* add back negative margin value */
   padding: 0.25rem 9999rem;
   background: linear-gradient(white 10%, #1786df 10% 90%, white 90%);
+}
+
+.feature-sub-footer-inner-div {
+  /* border: solid red 2px; */
 }
