fixing internationalization and getting ready to make marquee filter

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ therefore, total marquee width is about 395 * # of marquee Items */
 .marquee {
   height: 500px;
   min-width: 1580px !important;
-  overflow-y: visible;
+  overflow-y: hidden;
   overflow-x: hidden;
   position: relative;
   margin: 10px auto;
