--- a/src/pages/getADemo/GetADemo.css
+++ b/src/pages/getADemo/GetADemo.css
@@ -2,7 +2,12 @@
   border: solid #1886df 2px;
   margin-bottom: 10%;
   padding-top: 20px;
-  /* padding: 5%; */
+  display: flex;
+  justify-content: center;
+  width: 900px;
+}
+
+.demo-form-object-container {
   display: flex;
   justify-content: center;
 }
@@ -77,8 +82,14 @@
 
 .input_style {
   border: none;
+  border-bottom: solid #1886df 2px;
+  width: 300px;
+}
+
+.input_style:placeholder-shown {
+  border: none;
   border-bottom: solid #ebf9ff 2px;
-  width: 400px;
+  width: 300px;
 }
 
 .input_style:hover {
@@ -88,10 +99,6 @@
 
 .textarea_style {
   border: solid #ebf9ff 2px;
-}
-
-.textarea_style:hover {
-  border: solid #1886df 2px;
 }
 
 .demoTextTitleContainer {
