--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -400,3 +400,11 @@
 .home-page-partner-image {
   margin: 0 25px;
 }
+
+.partial-width-dark-blue {
+  margin: 0 -9999rem;
+  /* add back negative margin value */
+  padding: 0.25rem 9999rem;
+  background: #1786df;
+  background: linear-gradient(white 3%, #1786df 3% 55%, white 55%);
+}
