--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -33,8 +33,7 @@
 .top_row_left_col {
   display: flex;
   align-items: center;
-  margin: 0 100px 0 0;
-  min-width: 250px;
+  margin-right: 100px;
 }
 
 .mobile_top_row_left_col {
