--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -116,3 +116,22 @@
   padding: 0.25rem 9999rem;
   background: linear-gradient(white 10%, #1786df 10% 90%, white 90%);
 }
+
+.features-left-align-light-blue-background {
+  position: absolute;
+  z-index: 1;
+  margin-top: 0px;
+  margin-left: -700px;
+}
+
+.features-custom-left-align-light-blue-background {
+  position: absolute;
+  z-index: 1;
+  margin-left: -800px;
+}
+
+.features-right-align-light-blue-background {
+  position: absolute;
+  z-index: 1;
+  margin-left: 750px;
+}
