starting styling solutions page

--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -13,3 +13,17 @@
 .solutions-bottom-spacing {
   margin-bottom: 100px;
 }
+
+.left-align-light-blue-background {
+  position: absolute;
+  z-index: 0;
+  margin-top: 0px;
+  margin-left: -905px;
+}
+
+.right-align-light-blue-background {
+  position: absolute;
+  z-index: 0;
+  margin-top: 0px;
+  margin-left: 00px;
+}
