--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -10,6 +10,11 @@
   justify-content: center;
 }
 
+.solutions-subtitle p {
+  width: 600px;
+  text-align: center;
+}
+
 .solutions-bottom-spacing {
   margin-bottom: 100px;
 }
@@ -26,4 +31,44 @@
   z-index: 0;
   margin-top: 0px;
   margin-left: 00px;
+}
+
+.solutions-header {
+  margin-bottom: 150px;
+}
+
+.solutions-counselors-link-text {
+  border-bottom: 1px solid #1886df;
+  padding-bottom: 1px;
+}
+
+.solutions-counselors-link-text:hover {
+  border-bottom: 3px solid #1886df;
+}
+
+.solutions-it-link-text {
+  border-bottom: 1px solid #ff6575;
+  padding-bottom: 1px;
+}
+
+.solutions-it-link-text:hover {
+  border-bottom: 3px solid #ff6575;
+}
+
+.solutions-principals-link-text {
+  border-bottom: 1px solid #dfff4a;
+  padding-bottom: 1px;
+}
+
+.solutions-principals-link-text:hover {
+  border-bottom: 3px solid #dfff4a;
+}
+
+.solutions-superintendents-link-text {
+  border-bottom: 1px solid #1886df;
+  padding-bottom: 1px;
+}
+
+.solutions-superintendents-link-text:hover {
+  border-bottom: 3px solid #1886df;
 }
