--- a/src/index.css
+++ b/src/index.css
@@ -278,3 +278,9 @@ button:hover {
   height: auto;
   width: 100%;
 }
+
+.imageObjectTitle {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
