--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -150,3 +150,15 @@
   line-height: 1.5vw !important;
   padding-bottom: 10px;
 }
+
+.feature-send-portal-left-align-light-blue-rectangle {
+  position: absolute;
+  z-index: 1;
+  margin-left: -1200px;
+}
+
+.feature-send-portal-right-align-light-blue-rectangle {
+  position: absolute;
+  z-index: 1;
+  margin-left: 0px;
+}
