--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -57,3 +57,21 @@
   padding: 0 10% 0 10%;
   text-align: center;
 }
+
+.events-blue-stroke-10 {
+  position: absolute;
+  z-index: 1;
+  width: 50px;
+  margin-top: -260px;
+  margin-left: 1100px;
+  height: auto;
+}
+
+.events-oval {
+  position: absolute;
+  z-index: 1;
+  margin-top: -252px;
+  margin-left: -120px;
+  width: 50px;
+  height: auto;
+}
