--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -240,11 +240,9 @@
 }
 
 .homePartnerImages {
-  display: flex;
-  /* justify-content: space-around; */
   height: auto;
   width: 250px;
-  /* margin-bottom: 150px; */
+  margin: auto;
 }
 
 .mobile-homePartnerImagesContainer {
@@ -269,8 +267,8 @@
 }
 
 .imageObjectRow {
-  display: flex;
-  align-content: center;
+  /* display: flex;
+  align-content: center; */
 }
 
 .imageObjectTitle {
@@ -416,7 +414,8 @@
 }
 
 .home-page-partner-image {
-  margin: 0 25px;
+  margin: 0 10px;
+  border: solid red 2px;
 }
 
 .partial-width-dark-blue {
@@ -432,4 +431,9 @@
   /* add back negative margin value */
   padding: 0.25rem 9999rem;
   /* background: #ebf9ff; */
+}
+
+.partner-object-image-container {
+  display: flex;
+  height: 100px;
 }
