--- a/src/pages/downloads/Downloads.css
+++ b/src/pages/downloads/Downloads.css
@@ -66,3 +66,13 @@
   max-width: 700px;
   text-align: center;
 }
+
+.downloads-header-img {
+  width: 500px;
+  height: auto;
+}
+
+.downloads-header-text {
+  margin-right: 200px;
+  margin-top: 100px;
+}
