reversing coloring and increasing spacing on events page

--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -71,3 +71,11 @@
   margin-top: -275px;
   margin-left: -120px;
 }
+
+.events-cialfo-events-sessions-bottom-row {
+  padding-bottom: 100px;
+}
+
+.events-cialfo-events-sessions-top-row {
+  padding-top: 100px;
+}
