--- a/src/pages/privacyAndSecurity/privacyAndSecurity.css
+++ b/src/pages/privacyAndSecurity/privacyAndSecurity.css
@@ -78,8 +78,9 @@
   font-size: 20px;
 }
 
-.subheader-font-size {
-  font-size: 30px;
+.security-subheader {
+  font-size: 40px;
+  margin-bottom: 30px;
 }
 
 .security-title-font-size {
@@ -100,17 +101,25 @@
 .security-blue-stroke-10 {
   position: absolute;
   z-index: 1;
-  margin-top: -125px;
+  margin-top: -180px;
   margin-left: 550px;
 }
 
 .security-oval {
   position: absolute;
   z-index: 1;
-  margin-top: -100px;
+  margin-top: -150px;
   margin-left: -650px;
 }
 
 .security-header-text {
   z-index: 2;
+}
+
+.security-content-row-header {
+  margin-top: 100px;
+}
+
+.security-content-row-footer {
+  margin-bottom: 100px;
 }
