--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -76,8 +76,8 @@
 .solutions-line {
   position: absolute;
   z-index: 1;
-  margin-top: -150px;
-  margin-left: 600px;
+  margin-top: -175px;
+  margin-left: 650px;
 }
 
 .solutions-blue-stroke-10 {
@@ -92,12 +92,15 @@
 .solutions-oval {
   position: absolute;
   z-index: 1;
-  margin-top: 200px;
+  margin-top: 175px;
   margin-left: -650px;
-  width: 50px;
-  height: auto;
 }
 
 .solutions-header-text {
   z-index: 2;
+}
+
+.solutions-bold {
+  font-weight: bold !important;
+  margin-bottom: 0px;
 }
