--- a/src/pages/privacyAndSecurity/privacyAndSecurity.css
+++ b/src/pages/privacyAndSecurity/privacyAndSecurity.css
@@ -58,6 +58,7 @@
 .security-object-col-container {
   display: flex;
   justify-content: space-evenly;
+  width: 900px;
 }
 
 .white-font {
@@ -67,16 +68,13 @@
 .security-button {
   background-color: white;
   color: #1886df;
-  padding: 5px 10px;
+  padding: 15px 30px;
   border: none;
   font-size: 20px;
 }
 .security-button:hover {
   background-color: #2b0fca;
   color: white;
-  padding: 5px 10px;
-  border: none;
-  font-size: 20px;
 }
 
 .security-subheader {
@@ -147,6 +145,16 @@
   margin-bottom: 0;
 }
 
-p a {
+.privacy-link {
   color: #2a1f2f;
+}
+
+.security-header-subtitle {
+  width: 550px;
+  text-align: center;
+}
+
+.security-questions-blurb {
+  width: 600px;
+  text-align: center;
 }
