--- a/src/index.css
+++ b/src/index.css
@@ -294,3 +294,21 @@ button:hover {
   display: flex;
   justify-content: center;
 }
+
+.left-side-header-title {
+  margin-bottom: 20px;
+}
+
+.left-side-header-blurb {
+  max-width: 400px;
+}
+
+.top_row_left_col {
+  display: flex;
+  align-items: center;
+  margin-right: 100px;
+}
+
+.left-side-header-title-large-font {
+  font-size: 50px;
+}
