working on client stories page

--- a/src/pages/clientStories/clientStories.css
+++ b/src/pages/clientStories/clientStories.css
@@ -173,3 +173,17 @@ therefore, total marquee width is about 395 * # of marquee Items */
     left: -100%;
   }
 }
+
+.client-header-title-large-font {
+  font-size: 50px;
+  width: 400px;
+}
+
+.client-stories-home-page-card {
+  background: #ebf9ff;
+  max-width: 340px !important;
+}
+
+.client-stories-home-page-card-blurb {
+  height: 150px;
+}
