styling the mobile event page

--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -74,3 +74,12 @@
 .events-cialfo-events-sessions-top-row {
   padding-top: 100px;
 }
+
+.mobile-events-hero-image {
+  width: auto;
+  height: 250px;
+}
+
+.mobile-events-header-text {
+  text-align: center;
+}
