--- a/src/pages/clientStories/clientStories.css
+++ b/src/pages/clientStories/clientStories.css
@@ -103,7 +103,7 @@
 therefore, total marquee width is about 395 * # of marquee Items */
 .client-marquee {
   height: 500px;
-  min-width: 875px !important;
+  /* min-width: 875px !important; */
   overflow-y: hidden;
   overflow-x: hidden;
   position: relative;
@@ -117,7 +117,7 @@ therefore, total marquee width is about 395 * # of marquee Items */
   align-items: center;
   width: 200%;
   position: absolute;
-  animation: marquee 5s linear infinite;
+  animation: marquee 8s linear infinite;
   z-index: 2;
   margin-top: 30px;
 }
