styling the 404 mobile page

--- a/src/index.css
+++ b/src/index.css
@@ -311,3 +311,9 @@ button:hover {
 .blue-header-svg {
   z-index: 2;
 }
+
+.mobile-blue-header-svg {
+  z-index: 2;
+  height: auto;
+  width: 400px;
+}
