styling English privacy page

--- a/src/pages/privacyAndSecurity/privacyAndSecurity.css
+++ b/src/pages/privacyAndSecurity/privacyAndSecurity.css
@@ -146,6 +146,11 @@
   font-size: 22px;
 }
 
+.mobile-privacy-title {
+  font-size: 55px !important;
+  font-size: 22px;
+}
+
 .privacy-upper-title {
   font-size: 22px;
 }
