--- a/src/index.css
+++ b/src/index.css
@@ -322,3 +322,24 @@ button:hover {
   height: auto;
   width: 350px;
 }
+
+.full-width-light-blue {
+  margin: 0 -9999rem;
+  /* add back negative margin value */
+  padding: 0.25rem 9999rem;
+  background: #ebf9ff;
+}
+
+.full-width-near-black {
+  margin: 0 -9999rem;
+  /* add back negative margin value */
+  padding: 0.25rem 9999rem;
+  background: #2b1f31;
+}
+
+.full-width-dark-blue {
+  margin: 0 -9999rem;
+  /* add back negative margin value */
+  padding: 0.25rem 9999rem;
+  background: #1786df;
+}
