--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -257,12 +257,11 @@
   margin-bottom: 0px;
 }
 
-.full-width-light-blue {
+/* .full-width-light-blue {
   margin: 0 -9999rem;
-  /* add back negative margin value */
   padding: 0.25rem 9999rem;
   background: #ebf9ff;
-}
+} */
 
 .full-width-near-black {
   margin: 0 -9999rem;
@@ -271,12 +270,11 @@
   background: #2b1f31;
 }
 
-.full-width-dark-blue {
+/* .full-width-dark-blue {
   margin: 0 -9999rem;
-  /* add back negative margin value */
   padding: 0.25rem 9999rem;
   background: #1786df;
-}
+} */
 
 .about-partners-columns {
   margin: 0 75px;
