--- a/src/pages/downloads/Downloads.css
+++ b/src/pages/downloads/Downloads.css
@@ -44,19 +44,17 @@
   margin-top: 50px;
 }
 
-.full-width-light-blue {
+/* .full-width-light-blue {
   margin: 0 -9999rem;
-  /* add back negative margin value */
   padding: 0.25rem 9999rem;
   background: #ebf9ff;
-}
+} */
 
-.full-width-dark-blue {
+/* .full-width-dark-blue {
   margin: 0 -9999rem;
-  /* add back negative margin value */
   padding: 0.25rem 9999rem;
   background: #1786df;
-}
+} */
 
 .white-text {
   color: white;
