--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -37,6 +37,10 @@
   margin-bottom: 150px;
 }
 
+.mobile-solutions-header {
+  margin-bottom: 50px;
+}
+
 .solutions-counselors-link-text {
   border-bottom: 1px solid #1886df;
   padding-bottom: 1px;
@@ -108,4 +112,8 @@
 .solutions-marquee-container {
   display: flex;
   justify-content: center;
+}
+
+.mobile-solutions-blurb {
+  text-align: center;
 }
