--- a/src/pages/clientStories/clientStories.css
+++ b/src/pages/clientStories/clientStories.css
@@ -10,6 +10,16 @@
   width: 590px;
 }
 
+.mobile-client-story-hero-image {
+  width: 350px;
+  height: auto;
+}
+
+.mobile-client-story-school-title {
+  font-size: 40px;
+  text-align: center;
+}
+
 .client-school-card {
   border: solid #3386df 2px;
   height: 620px;
