--- a/src/pages/downloads/Downloads.css
+++ b/src/pages/downloads/Downloads.css
@@ -70,7 +70,16 @@
   height: auto;
 }
 
+.mobile-downloads-header-img {
+  width: 350px;
+}
+
 .downloads-header-text {
   margin-right: 200px;
   margin-top: 100px;
+}
+
+.mobile-download-button-row {
+  display: flex;
+  justify-content: center;
 }
